# nws-drought

./: .gitignore  README.md  __init__.py  config.py  download.grib  download.grib.923a8.idx  download.netcdf  download.py  download_helpers.py  environment.yml  era5_land_variable_registry.py  file_helpers.py  grib_playground.ipynb  indices.py  luts.py  package-list.txt  pipeline_download.py  pipeline_download.sbatch  pipeline_run.py  pipeline_run.sbatch  pyproject.toml
baseline_data_generation_scripts/: README.md  combine_annual_files.py  combine_annual_files.sbatch  combine_hourly_to_daily_years.py  combine_soil_moisture_layers.py  combine_soil_moisture_layers.sbatch  create_doy_climo.py  create_doy_climo.sbatch  create_swe_doy_climo.py  create_tp_doy_climo.py  download_calibration_data.py  download_calibration_pev.sbatch  download_calibration_precip.sbatch  download_climo_swe.sbatch  download_climo_swvl1.sbatch  download_climo_swvl2.sbatch  download_era5_land_climo.py  download_era5_land_climo.sbatch  download_swe.py  download_swvl_level_1.py  download_swvl_level_2.py  grib_to_nc_job_array.sbatch  grib_to_netcdf.py  hour_2_daily.sbatch  hour_2_daily_combine.sbatch  hourly_to_daily.py  process_calibration_params.py  process_calibration_params.sbatch  process_hourly_calibration_data.py  process_hourly_pev_calibration.sbatch  process_hourly_swvl.sbatch  process_hourly_swvl_data.py  process_hourly_tp_calibration.sbatch  swe_climo.sbatch  tp_climo.sbatch
data_viz/: communities_ak_filtered.json  plot_all.py  plot_all_regions.py  plot_by_interval.py  plot_common.py  (+23 more)
(+30 files in other folders)
