[project]
name = "nws-drought"
version = "2.0.0"
description = "Drought Indicators Pipeline"
requires-python = ">=3.11,<3.13"
dependencies = [
  "cdsapi",
  "earthkit-data",
  "xarray",
  "xclim",
  "dask[distributed]",
  "numpy",
  "pandas",
  "scipy",
  "netcdf4",
  "eccodes",
  "eccodeslib"
]

[dependency-groups]
dev = [
  "black",
]