[project]
name = "nws-drought"
version = "2.0.0"
description = "Drought Indicators Pipeline"
requires-python = ">=3.11,<3.13"
dependencies = [
  "cdsapi",
  "earthkit-data",
  "xarray",
  "xclim",
  "numpy",
  "pandas",
  "scipy",
  "netcdf4",
  "h5netcdf",
  "h5py",
  "eccodes",
  "eccodeslib",
  "matplotlib"
]

[dependency-groups]
dev = [
  "black",
]
