[project]
name = "nws-drought"
version = "2.0.0"
description = "Drought Indicators Pipeline"
requires-python = ">=3.11,<3.13"
dependencies = [
  "cdsapi",
  "xarray",
  "xclim",
  "numpy",
  "pandas",
  "scipy",
  "netcdf4",
  "h5netcdf",
  "h5py",
  "eccodes",
  "eccodeslib",
  "matplotlib",
  "cartopy",
  "cfgrib>=0.9.15.1",
]

[dependency-groups]
dev = [
  "black",
]